--- a/index.css
+++ b/index.css
@@ -60,23 +60,23 @@ input {
 main {
   display: flex;
   justify-content: center;
+  margin: 0 1rem;
 }
 
 #movie-section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  width: 90%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
 }
 
 .card-container {
-  width: 23%;
   cursor: pointer;
+  padding: 0.5rem;
 }
 
 .card-img {
   width: 100%;
-  height: 90%;
+  height: 85%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -88,4 +88,7 @@ main {
   font-size: 1.3rem;
   text-align: center;
   margin: 0.7rem 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
