--- a/index.css
+++ b/index.css
@@ -17,13 +17,22 @@ body {
 }
 
 header {
-  width: 40%;
+  width: 100%;
   height: 3.3rem;
   margin: 0 auto;
-  padding: 1.8rem 0;
+  padding: 0.8rem 0;
   display: flex;
   gap: 1rem;
+  justify-content: center;
   align-items: center;
+  position: fixed;
+  background-color: black;
+  z-index: 1;
+  transition: 1s;
+}
+
+header.scrollDown {
+  transform: translate(0, -4.9rem);
 }
 
 input {
@@ -36,7 +45,7 @@ input {
 }
 
 .search-container {
-  width: 100%;
+  width: 33rem;
   height: 100%;
   position: relative;
 }
@@ -59,9 +68,10 @@ input {
 }
 
 main {
+  padding-top: 5.9rem;
+  margin: 0 1rem;
   display: flex;
   justify-content: center;
-  margin: 0 1rem;
 }
 
 #movie-section {
