--- a/index.css
+++ b/index.css
@@ -18,9 +18,9 @@ body {
 
 header {
   width: 100%;
-  height: 3.3rem;
+  height: 3rem;
   margin: 0 auto;
-  padding: 0.8rem 0;
+  padding: 1rem 0;
   display: flex;
   gap: 1rem;
   justify-content: center;
@@ -35,7 +35,13 @@ header.scrollDown {
   transform: translate(0, -4.9rem);
 }
 
+button {
+  border: 0;
+  cursor: pointer;
+}
+
 input {
+  border: 0;
   outline: none;
 }
 
@@ -45,9 +51,15 @@ input {
 }
 
 .search-container {
-  width: 33rem;
-  height: 100%;
+  height: 85%;
   position: relative;
+}
+
+#search-form {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .search-icon {
@@ -59,12 +71,25 @@ input {
 }
 
 #search-input {
-  width: 100%;
+  width: 28rem;
   height: 100%;
-  padding-left: 2.5rem;
+  padding-left: 2.7rem;
   box-sizing: border-box;
-  border-radius: 0.5rem;
-  font-size: 1.3rem;
+  border-radius: 0.5rem 0 0 0.5rem;
+  font-size: 1.2rem;
+}
+
+.search-btn {
+  width: 5rem;
+  height: 100%;
+  background: #a926bc;
+  border-radius: 0 0.5rem 0.5rem 0;
+  color: white;
+  font-size: 1rem;
+}
+
+#search-btn:hover {
+  background: #ce41c1;
 }
 
 main {
