--- a/index.css
+++ b/index.css
@@ -19,11 +19,10 @@ body {
 header {
   width: 100%;
   height: 3rem;
-  margin: 0 auto;
+  margin: 0 1rem;
   padding: 1rem 0;
   display: flex;
-  gap: 1rem;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   position: fixed;
   background-color: black;
@@ -43,6 +42,27 @@ button {
 input {
   border: 0;
   outline: none;
+}
+/* --- */
+
+#header-lang-btn {
+  color: #ffffff;
+  background-color: #000000;
+  padding: 0.5rem 1rem;
+  border: 1px solid #999999;
+  border-radius: 0.5rem;
+}
+
+#header-lang-btn:hover {
+  box-shadow: 0 0 10px 5px #a826bc94;
+}
+
+.header-search {
+  height: 100%;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
 }
 
 .icon {
@@ -79,7 +99,7 @@ input {
   font-size: 1.2rem;
 }
 
-.search-btn {
+#search-btn {
   width: 5rem;
   height: 100%;
   background: #a926bc;
@@ -102,11 +122,10 @@ main {
 #movie-section {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 1rem;
+  gap: 1.2rem;
 }
 
 .card-container {
-  padding: 0.5rem;
   cursor: pointer;
 }
 
@@ -124,6 +143,7 @@ main {
 }
 
 .card-info {
+  width: 100%;
   height: 100%;
   padding: 0.7rem 0.5rem;
   box-sizing: border-box;
