--- a/index.css
+++ b/index.css
@@ -268,6 +268,10 @@ main {
     align-items: flex-end;
   }
 
+  .header-search {
+    width: 100%;
+  }
+
   header.scrollDown {
     transform: translate(0, -7.9rem);
   }
