--- a/index.css
+++ b/index.css
@@ -131,7 +131,7 @@ main {
   justify-content: center;
 }
 
-#movie-section {
+#movie-list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1.2rem;
@@ -238,13 +238,13 @@ main {
 }
 
 @media screen and (max-width: 1150px) {
-  #movie-section {
+  #movie-list {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
 @media screen and (max-width: 900px) {
-  #movie-section {
+  #movie-list {
     grid-template-columns: repeat(2, 1fr);
   }
 }
@@ -256,7 +256,7 @@ main {
 }
 
 @media screen and (max-width: 610px) {
-  #movie-section {
+  #movie-list {
     grid-template-columns: repeat(1, 1fr);
   }
 }
