--- a/style/index.css
+++ b/style/index.css
@@ -7,26 +7,63 @@ header {
   align-items: center;
   position: fixed;
   background-color: black;
-  z-index: 1;
+  z-index: 2;
   transition: 1s;
   box-sizing: border-box;
 }
 
-header.scrollDown {
+.scrollDown {
   transform: translate(0, -4.9rem);
+  top: 0 !important;
 }
 
-#header-lang-btn {
+.header-btn-group {
+  display: flex;
+  gap: 1rem;
+}
+
+.header-btn-group button,
+.header-btn-group select {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
   color: #ffffff;
   background-color: #000000;
   padding: 0.5rem 1rem;
   border: 1px solid #999999;
   border-radius: 0.5rem;
   line-height: 1;
+  outline: none;
 }
 
-#header-lang-btn:hover {
+.header-btn-group button:hover,
+.header-btn-group select:hover {
   box-shadow: 0 0 10px 5px #a826bc94;
+}
+
+.header-btn-group button img,
+.header-btn-group .sort-container img {
+  width: 0.9rem;
+}
+
+.header-btn-group select {
+  -o-appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  padding-right: 2.2rem;
+}
+
+.sort-container {
+  position: relative;
+}
+
+.sort-container img {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 1rem;
 }
 
 .header-search {
@@ -205,6 +242,11 @@ main {
   height: 19.2rem; /* 16rem * 1.2 */
 }
 
+.card-end {
+  display: flex;
+  justify-content: space-between;
+}
+
 .card-container:hover .card-info {
   background-color: #000000b0;
   opacity: 1;
@@ -270,7 +312,7 @@ main {
     width: 100%;
   }
 
-  header.scrollDown {
+  .scrollDown {
     transform: translate(0, -7.9rem);
   }
 }
