--- a/style/details.css
+++ b/style/details.css
@@ -65,7 +65,7 @@ strong {
 .review-text {
   font-size: 15px;
   width: 100%;
-  height: 50%;
+  height: 40%;
   display: flex;
   align-items: center;
   word-break: break-all;
@@ -76,10 +76,16 @@ strong {
 .review-text::-webkit-scrollbar {
   display: none;
 }
+.user {
+  display: flex;
+  justify-content: space-between;
+}
+.user-id {
+  margin-left: 10px;
+  font-size: 13px;
+}
 .data-modify {
   display: flex;
-  align-content: flex-end;
-  justify-content: flex-end;
 }
 .modify {
   color: #a826bc94;
@@ -204,6 +210,7 @@ strong {
   color: white;
   margin: 5px 0px 5px 0px;
 }
+
 @media screen and (max-width: 1500px) {
   .main-img {
     display: none;
