feat:리뷰 삭제,수정 내용 로컬스토리지에 저장/업데이트

--- a/style/details.css
+++ b/style/details.css
@@ -38,6 +38,14 @@ body {
   grid-template-columns: 1fr;
   overflow-y: scroll;
 }
+
+/* #boxs{
+  background-color: white;
+}
+#btns{
+  background-color: #000000;;
+} */
+
 .review::-webkit-scrollbar {
   display: none;
 }
