--- a/style/details.css
+++ b/style/details.css
@@ -58,18 +58,18 @@ strong {
   width: 100%;
   height: 85px;
   border-radius: 10px;
-  margin-bottom: 12px;
   display: block;
   align-items: center;
+  margin-top: 15px;
 }
 .review-text {
   font-size: 15px;
   width: 100%;
-  height: 40%;
+  height: 70%;
   display: flex;
   align-items: center;
   word-break: break-all;
-  padding-top: 15px;
+  padding-top: 0px;
   padding-left: 5px;
   overflow-y: scroll;
 }
@@ -109,10 +109,14 @@ strong {
   height: 40px;
 }
 .id {
+  width: 40%;
   padding-left: 10px;
+  font-size: 12px;
 }
 .pw {
+  width: 40%;
   padding-left: 10px;
+  font-size: 12px;
 }
 .input {
   padding-top: 10px;
@@ -158,13 +162,13 @@ strong {
   display: flex;
   flex-direction: column;
   text-align: center;
-  line-height: 15px;
+  line-height: 10px;
   font-size: 25px;
   color: white;
   margin-top: 0px;
 }
 .year {
-  padding: 30px 0;
+  padding: 20px;
   display: block;
   font-size: 15px;
   color: rgb(160, 160, 160);
@@ -174,6 +178,7 @@ strong {
   padding: 0px;
   display: flex;
   align-items: center;
+  margin-top: 15px;
 }
 .img {
   width: 300px;
@@ -205,6 +210,7 @@ strong {
   color: rgb(160, 160, 160);
   padding-top: 10px;
   border-top: 1px solid #adadad94;
+  line-height: 20px;
 }
 #text-title {
   color: white;
@@ -220,18 +226,23 @@ strong {
 .photo {
   width: 300px;
   height: 400px;
-  margin: 80px 10px 20px 30px;
+  margin: 50px 10px 20px 30px;
   list-style: none;
   display: inline-block;
   background-color: green;
 }
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1300px) {
+  .main-img {
+    width: 70%;
+    height: 70%;
+  }
+}
+@media screen and (max-width: 1000px) {
   .main-img {
     display: none;
   }
 }
-
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 700px) {
   .main {
     display: none;
   }
