--- a/style/details.css
+++ b/style/details.css
@@ -13,7 +13,6 @@ strong {
 .logo {
   margin: 0px;
   padding: 20px;
-
 }
 /*오른쪽 고정 리뷰 창*/
 .header {
@@ -199,7 +198,7 @@ strong {
   display: flex;
   align-items: flex-end;
 }
-.but {
+.btn {
   border: 0px;
   width: 15%;
   height: 80px;
@@ -295,21 +294,6 @@ strong {
   margin: 5px 0px 5px 0px;
 }
 
-/*상세 페이지 - 스 틸 컷*/
-.photo-g {
-  width: 100%;
-  position: relative;
-  overflow: hidden;
-  white-space: nowrap;
-}
-.photo {
-  width: 300px;
-  height: 400px;
-  margin: 50px 10px 20px 30px;
-  list-style: none;
-  display: inline-block;
-  background-color: green;
-}
 @media screen and (max-width: 1300px) {
   .main-img {
     width: 70%;
