--- a/style/details.css
+++ b/style/details.css
@@ -299,6 +299,54 @@ strong {
   margin: 5px 0px 5px 0px;
 }
 
+.image-container {
+  display: flex;
+  overflow-x: auto;
+  margin: 70px auto 0px;
+  max-width: 1100px;
+}
+
+.image-container::-webkit-scrollbar {
+  width: 8px;
+  height: 10px;
+  background-color: rgb(64, 64, 64);
+}
+
+.image-container::-webkit-scrollbar-thumb {
+  background: rgb(91, 91, 91);
+  border-radius: 5px;
+}
+
+.image-container img {
+  width: 300px;
+  margin-right: 10px;
+}
+
+.image-box {
+  margin-right: 400px !important;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  overflow: auto;
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100%;
+  max-height: 100%;
+}
+
 @media screen and (max-width: 1300px) {
   .main-img {
     width: 70%;
