--- a/style/details.css
+++ b/style/details.css
@@ -76,7 +76,7 @@ strong {
   width: 100%;
   height: 70%;
   word-break: break-all;
-  padding: 5px 10px 0px 10px;
+  padding: 10px;
   overflow-y: scroll;
 }
 .review::-webkit-scrollbar {
