--- a/style/details.css
+++ b/style/details.css
@@ -13,7 +13,7 @@ strong {
 /* 뒤로 가기 */
 #back {
   position: fixed;
-  padding: 15px;
+  padding: 15px 5px;
   z-index: 1;
 }
 
@@ -79,7 +79,7 @@ strong {
   width: 100%;
   max-height: 85px;
   border-radius: 5px;
-  padding: 0.5rem;
+  padding: 0.7rem;
 }
 .review-id {
   font-size: 0.8rem;
@@ -117,6 +117,9 @@ strong {
   background-color: transparent;
   border: none;
   font-size: 12px;
+}
+#not-found {
+  color: #9e9e9e;
 }
 
 /* 리뷰 입력 창 */
@@ -204,7 +207,7 @@ strong {
   margin-top: 0px;
 }
 .year {
-  padding: 20px 0 10px;
+  padding: 20px 0 15px;
   display: block;
   font-size: 15px;
   color: rgb(160, 160, 160);
