--- a/style/index.css
+++ b/style/index.css
@@ -329,6 +329,7 @@ main {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.89);
   opacity: 1;
   transition: 0.5s;
+  z-index: 1;
 }
 
 #scroll-top-btn.hide {
