--- a/style/index.css
+++ b/style/index.css
@@ -313,9 +313,109 @@ main {
   opacity: 1;
 }
 
+.to-main-btn {
+  background-color: transparent;
+  position: relative;
+  display: inline-block;
+  padding: 5px 10px;
+  margin: 40px 0;
+  color: #cf52e2;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: 0.5s;
+  letter-spacing: 1px;
+  overflow: hidden;
+}
+.to-main-btn:hover {
+  background: #fd77f8;
+  color: black;
+  box-shadow: 0 0 5px #fd77f8, 0 0 25px #fd77f8, 0 0 50px #fd77f8, 0 0 200px #fd77f8;
+}
+
+.to-main-btn:nth-child(2) {
+  filter: hue-rotate(110deg);
+}
+.to-main-btn span {
+  position: absolute;
+  display: block;
+}
+.to-main-btn span:nth-child(1) {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #fd77f8);
+  animation: animate1 1s linear infinite;
+}
+@keyframes animate1 {
+  0% {
+    left: -100%;
+  }
+  50%,
+  100% {
+    left: 100%;
+  }
+}
+.to-main-btn span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #fd77f8);
+  animation: animate2 1s linear infinite;
+  animation-delay: 0.25s;
+}
+@keyframes animate2 {
+  0% {
+    top: -100%;
+  }
+  50%,
+  100% {
+    top: 100%;
+  }
+}
+.to-main-btn span:nth-child(3) {
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #fd77f8);
+  animation: animate3 1s linear infinite;
+  animation-delay: 0.5s;
+}
+@keyframes animate3 {
+  0% {
+    right: -100%;
+  }
+  50%,
+  100% {
+    right: 100%;
+  }
+}
+
+.to-main-btn span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #fd77f8);
+  animation: animate4 1s linear infinite;
+  animation-delay: 0.75s;
+}
+@keyframes animate4 {
+  0% {
+    bottom: -100%;
+  }
+  50%,
+  100% {
+    bottom: 100%;
+  }
+}
+
 #not-found {
   display: none;
   color: #ffffff;
+  text-align: center;
 }
 
 #scroll-top-btn {
